--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="icon" href="assets/images/logo/black.png" color="black">
+    <title>Simone Cottini</title>
 </head>
 <body>
-    Hello there, this is my personal page!
+
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container pt-2 mb-2">
+        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+            <img src="assets/images/logo/white.png" height="70" loading="lazy" class="grayscale"/>
+        </a>
+
+        <div class="navbar-nav flex-row d-none d-md-flex">
+            <section class="mt-3 text-white">
+                <h2>Rust/Elixir/Elm developer</h2>
+            </section>
+        </div>
+
+        <div class="d-flex align-items-center">
+            <a class="d-flex align-items-center hidden-arrow">
+                <img src="assets/images/avatar.png" class="rounded-circle" height="70" loading="lazy"/>
+            </a>
+        </div>
+    </div>
+</nav>
+
+<div class="pt-4">
+    <div class="container pt-4">
+        <section class="text-start text-white" data-markdown></section>
+    </div>
+</div>
+
+<div style="height: 110px;"></div>
+
+<footer class="text-center text-white fixed-bottom">
+    <div class="container pt-4 bordered">
+        <section>
+            <a class="btn btn-floating btn-lg text-white m-1" href="https://github.com/cottinisimone"
+               role="button" data-mdb-ripple-color="white" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
+            <a class="btn btn-floating btn-lg text-white m-1"
+               href="https://www.linkedin.com/in/simone-cottini-664552aa/" role="button"
+               data-mdb-ripple-color="white" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+
+            <a class="btn btn-floating btn-lg text-white m-1" href="mailto: cottini.simone@gmail.com"
+               role="button" data-mdb-ripple-color="white" target="_blank"><i class="far fa-envelope fa-2x"></i></a>
+
+            <a class="btn btn-floating btn-lg text-white m-1" href="https://drive.google.com/file/d/1DgwbJeo_gARRXY0bWWfnjwxJj3wxyLfV/view?usp=share_link"
+               role="button" data-mdb-ripple-color="white" target="_blank"><i class="far fa-file-pdf fa-2x"></i></a>
+        </section>
+    </div>
+</footer>
+
+<script src="assets/js/index.js"></script>
+
 </body>
 </html>
