--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
     </div>
 </nav>
 
-<div class="pt-4">
+<div class="pt-4 mt-4">
     <div class="container pt-4">
-        <section class="text-start text-white" data-markdown></section>
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-8">
+                <section class="text-start text-white" data-markdown></section>
+            </div>
+        </div>
     </div>
 </div>
 
