--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a>
 
             <a class="btn btn-floating btn-lg text-white m-1 ms-2 me-2"
-               href="https://drive.google.com/file/d/1DgwbJeo_gARRXY0bWWfnjwxJj3wxyLfV/view?usp=share_link"
+               href="https://drive.google.com/file/d/1M1QrWfKbA6eCAR3Jqz5JKe8oy42362Hx/view"
                role="button" data-mdb-ripple-color="white" target="_blank">
                 <i class="far fa-file-pdf fa-2x"></i>
             </a>
